--- a/language/eu.json
+++ b/language/eu.json
@@ -4,8 +4,8 @@
     "sameAsSpacing": "Tartearen berdina",
     "noFrame": "Fotogramarik ez",
     "uploadError": "Ezin izan da irudia kargatu. Oso litekeena da fitxategia handiegia izatea.",
-    "zoomIn": "Zoom In",
-    "zoomOut": "Handiagotu",
+    "zoomIn": "Handiagotu",
+    "zoomOut": "Txikitu",
     "noMoreZoom": "Zoomaren topea",
     "addImage": "Gehitu irudia",
     "changeImage": "Aldatu irudia",
