--- a/language/eu.json
+++ b/language/eu.json
@@ -5,7 +5,7 @@
     "noFrame": "Fotogramarik ez",
     "uploadError": "Ezin izan da irudia kargatu. Oso litekeena da fitxategia handiegia izatea.",
     "zoomIn": "Handiagotu",
-    "zoomOut": "Txikitu",
+    "zoomOut": "Txikiagotu",
     "noMoreZoom": "Zoomaren topea",
     "addImage": "Gehitu irudia",
     "changeImage": "Aldatu irudia",
