--- a/language/eu.json
+++ b/language/eu.json
@@ -2,7 +2,7 @@
   "libraryStrings": {
     "confirmReset": "Ziur zaude diseinua aldatu nahi duzula? Honek aurrebista berrabiaraziko du.",
     "sameAsSpacing": "Tartearen berdina",
-    "noFrame": "Fotogramarik ez",
+    "noFrame": "Markorik ez",
     "uploadError": "Ezin izan da irudia kargatu. Oso litekeena da fitxategia handiegia izatea.",
     "zoomIn": "Handiagotu",
     "zoomOut": "Txikiagotu",
