--- a/language/nl.json
+++ b/language/nl.json
@@ -1,6 +1,6 @@
 {
   "libraryStrings": {
-    "confirmReset": "Weet je zeker dat je de layout wilt wijzigen? Dit stelt de preview oopnieuw in.",
+    "confirmReset": "Weet je zeker dat je de layout wilt wijzigen? Dit stelt de preview opnieuw in.",
     "sameAsSpacing": "Zelfde als spatiëring",
     "noFrame": "Geen frame",
     "uploadError": "Kan afbeelding niet uploaden. Het bestand is waarschijnlijk te groot.",
