Complementing the translation
Complementing the translation and correcting an existing translation

--- a/language/bg.json
+++ b/language/bg.json
@@ -4,9 +4,9 @@
     "sameAsSpacing": "Също като разстояние",
     "noFrame": "Без рамка",
     "uploadError": "Проблем при качване на изображението. Този файл вероятно е прекалено голям.",
-    "zoomIn": "Увеличаване на зума",
-    "zoomOut": "Намялаване на зума",
-    "noMoreZoom": "Без повече зумиране",
+    "zoomIn": "Увеличаване",
+    "zoomOut": "Намаляване",
+    "noMoreZoom": "Без повече увеличаване",
     "addImage": "Добавяне на изображение",
     "changeImage": "Смяна на изображението",
     "imageSettings": "Настройки на изображението",
