JI-2507 Change form native js dialog to H5P.confirmationDialog after chrome change

--- a/language/bg.json
+++ b/language/bg.json
@@ -12,6 +12,7 @@
     "imageSettings": "Настройки на изображението",
     "close": "Затваряне",
     "imageAltLabel": "Допълнителен текст",
-    "imageTitleLabel": "Текст под мишката"
+    "imageTitleLabel": "Текст под мишката",
+    "pleaseConfirm": "Please confirm"
   }
 }
