--- a/language/es.json
+++ b/language/es.json
@@ -12,6 +12,7 @@
     "imageSettings": "Ajustes de Imagen",
     "close": "Cerrar",
     "imageAltLabel": "Texto alternativo",
-    "imageTitleLabel": "Texto al pasar ratón encima"
+    "imageTitleLabel": "Texto al pasar ratón encima",
+    "pleaseConfirm": "Please confirm"
   }
 }
