--- a/language/sme.json
+++ b/language/sme.json
@@ -12,6 +12,7 @@
     "imageSettings": "Image settings",
     "close": "Close",
     "imageAltLabel": "Alternative text",
-    "imageTitleLabel": "Hover text"
+    "imageTitleLabel": "Hover text",
+    "pleaseConfirm": "Please confirm"
   }
 }
