--- a/language/zh-hant.json
+++ b/language/zh-hant.json
@@ -12,6 +12,7 @@
     "imageSettings": "圖片資訊設定",
     "close": "關閉",
     "imageAltLabel": "替代文字",
-    "imageTitleLabel": "懸停文字"
+    "imageTitleLabel": "懸停文字",
+    "pleaseConfirm": "Please confirm"
   }
 }
