--- a/language/el.json
+++ b/language/el.json
@@ -13,6 +13,6 @@
     "close": "Κλείσιμο",
     "imageAltLabel": "Εναλλακτικό κείμενο",
     "imageTitleLabel": "Επεξηγηματικό κείμενο",
-    "pleaseConfirm": "Please confirm"
+    "pleaseConfirm": "Παρακαλώ επιβεβαιώστε"
   }
 }
