Allow author to add image metadata

--- a/language/ca.json
+++ b/language/ca.json
@@ -13,6 +13,7 @@
     "close": "Tancar[close]",
     "imageAltLabel": "Text alternatiu",
     "imageTitleLabel": "Text que es mostra en passar el cursor per sobre",
-    "pleaseConfirm": "Please confirm"
+    "pleaseConfirm": "Please confirm",
+    "metadata": "Metadata settings"
   }
 }
