--- a/language/cs.json
+++ b/language/cs.json
@@ -13,6 +13,7 @@
     "close": "Zavřít",
     "imageAltLabel": "Alternativní text",
     "imageTitleLabel": "Najet kurzorem na text",
-    "pleaseConfirm": "Please confirm"
+    "pleaseConfirm": "Please confirm",
+    "metadata": "Metadata settings"
   }
 }
