--- a/language/ko.json
+++ b/language/ko.json
@@ -13,6 +13,7 @@
     "close": "닫기",
     "imageAltLabel": "대체 텍스트",
     "imageTitleLabel": "호버 텍스트",
-    "pleaseConfirm": "Please confirm"
+    "pleaseConfirm": "Please confirm",
+    "metadata": "Metadata settings"
   }
 }
