--- a/language/sv.json
+++ b/language/sv.json
@@ -13,6 +13,7 @@
     "close": "Stäng",
     "imageAltLabel": "Alternativ text",
     "imageTitleLabel": "Hovringstext",
-    "pleaseConfirm": "Bekräfta"
+    "pleaseConfirm": "Bekräfta",
+    "metadata": "Metadata settings"
   }
 }
