--- a/language/bg.json
+++ b/language/bg.json
@@ -13,6 +13,7 @@
     "close": "Затваряне",
     "imageAltLabel": "Допълнителен текст",
     "imageTitleLabel": "Текст под мишката",
-    "pleaseConfirm": "Please confirm"
+    "pleaseConfirm": "Please confirm",
+    "metadata": "Metadata settings"
   }
 }
