--- a/language/de.json
+++ b/language/de.json
@@ -13,6 +13,7 @@
     "close": "Schließen",
     "imageAltLabel": "Alternativtext",
     "imageTitleLabel": "Text beim Darüberfahren mit Maus",
-    "pleaseConfirm": "Bitte bestätigen"
+    "pleaseConfirm": "Bitte bestätigen",
+    "metadata": "Metadata settings"
   }
 }
