--- a/language/el.json
+++ b/language/el.json
@@ -13,6 +13,7 @@
     "close": "Κλείσιμο",
     "imageAltLabel": "Εναλλακτικό κείμενο",
     "imageTitleLabel": "Επεξηγηματικό κείμενο",
-    "pleaseConfirm": "Παρακαλώ επιβεβαιώστε"
+    "pleaseConfirm": "Παρακαλώ επιβεβαιώστε",
+    "metadata": "Metadata settings"
   }
 }
