--- a/language/es.json
+++ b/language/es.json
@@ -13,6 +13,7 @@
     "close": "Cerrar",
     "imageAltLabel": "Texto alternativo",
     "imageTitleLabel": "Texto al pasar ratón encima",
-    "pleaseConfirm": "Por favor confirmar"
+    "pleaseConfirm": "Por favor confirmar",
+    "metadata": "Metadata settings"
   }
 }
