--- a/language/et.json
+++ b/language/et.json
@@ -13,6 +13,7 @@
     "close": "Sulge",
     "imageAltLabel": "Alternatiivne tekst",
     "imageTitleLabel": "Hõljuva kursori tekst",
-    "pleaseConfirm": "Please confirm"
+    "pleaseConfirm": "Please confirm",
+    "metadata": "Metadata settings"
   }
 }
