--- a/language/fr.json
+++ b/language/fr.json
@@ -13,6 +13,7 @@
     "close": "Fermer",
     "imageAltLabel": "Texte alternatif",
     "imageTitleLabel": "Texte en survollement",
-    "pleaseConfirm": "Please confirm"
+    "pleaseConfirm": "Please confirm",
+    "metadata": "Metadata settings"
   }
 }
