--- a/language/it.json
+++ b/language/it.json
@@ -13,6 +13,7 @@
     "close": "Chiudi",
     "imageAltLabel": "Testo alternativo",
     "imageTitleLabel": "Testo al passaggio del mouse",
-    "pleaseConfirm": "Please confirm"
+    "pleaseConfirm": "Please confirm",
+    "metadata": "Metadata settings"
   }
 }
