--- a/language/pt.json
+++ b/language/pt.json
@@ -13,6 +13,7 @@
     "close": "Fechar",
     "imageAltLabel": "Texto alternativo",
     "imageTitleLabel": "Texto ao passar o rato por cima",
-    "pleaseConfirm": "Por favor, confirme"
+    "pleaseConfirm": "Por favor, confirme",
+    "metadata": "Metadata settings"
   }
 }
