--- a/language/sma.json
+++ b/language/sma.json
@@ -13,6 +13,7 @@
     "close": "Close",
     "imageAltLabel": "Alternative text",
     "imageTitleLabel": "Hover text",
-    "pleaseConfirm": "Please confirm"
+    "pleaseConfirm": "Please confirm",
+    "metadata": "Metadata settings"
   }
 }
