--- a/language/tr.json
+++ b/language/tr.json
@@ -13,6 +13,7 @@
     "close": "Kapat",
     "imageAltLabel": "Alternatif metin",
     "imageTitleLabel": "Üzerine gelince metin",
-    "pleaseConfirm": "Lütfen onaylayın"
+    "pleaseConfirm": "Lütfen onaylayın",
+    "metadata": "Metadata settings"
   }
 }
