--- a/language/zh-hans.json
+++ b/language/zh-hans.json
@@ -13,6 +13,7 @@
     "close": "关闭",
     "imageAltLabel": "替代文字",
     "imageTitleLabel": "悬停文字",
-    "pleaseConfirm": "请确认"
+    "pleaseConfirm": "请确认",
+    "metadata": "Metadata settings"
   }
 }
