--- a/language/zh-hant.json
+++ b/language/zh-hant.json
@@ -13,6 +13,7 @@
     "close": "關閉",
     "imageAltLabel": "替代文字",
     "imageTitleLabel": "懸停文字",
-    "pleaseConfirm": "Please confirm"
+    "pleaseConfirm": "Please confirm",
+    "metadata": "Metadata settings"
   }
 }
