Add missing metadata label.

--- a/language/lt.json
+++ b/language/lt.json
@@ -13,6 +13,7 @@
     "close": "Uždaryti",
     "imageAltLabel": "Alternatyvus tekstas",
     "imageTitleLabel": "Pažymėtas tekstas",
-    "pleaseConfirm": "Prašau patvirtinti"
+    "pleaseConfirm": "Prašau patvirtinti",
+    "metadata": "Metadata settings"
   }
 }
