--- a/language/el.json
+++ b/language/el.json
@@ -14,6 +14,6 @@
     "imageAltLabel": "Εναλλακτικό κείμενο",
     "imageTitleLabel": "Επεξηγηματικό κείμενο",
     "pleaseConfirm": "Παρακαλώ επιβεβαιώστε",
-    "metadata": "Metadata settings"
+    "metadata": "Ρυθμίσεις μεταδεδομένων"
   }
 }
