--- a/language/sl.json
+++ b/language/sl.json
@@ -13,7 +13,7 @@
     "close": "Zapri",
     "imageAltLabel": "Nadomestno besedilo",
     "imageTitleLabel": "Besedilo ob preletu miške",
-    "pleaseConfirm": "Please confirm",
-    "metadata": "Metadata settings"
+    "pleaseConfirm": "Potrdi",
+    "metadata": "Nastavitev metapodatkov"
   }
 }
